# MyQtClient

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7208afe  README.en.md  README.md  代码行数统计.bat
data/1/: 1.db  1.db-shm  1.db-wal
data/2/: 2.db
data/3/: 3.db
data/7/: 7.db  7.db-shm  7.db-wal
data/moe/: moe.db
data/user_1001/: user_1001.db  user_1001.db-shm  user_1001.db-wal
src/: main.cpp
src/DataBaseManage/: databasemanage.cpp  databasemanage.h
src/DataBaseManage/ViewModel/: FriendAvatarDTO.h
src/DataBaseManage/model/: ChatRecord.h  FriendInfo.h  FriendsResponse.cpp  FriendsResponse.h  recent_messages.h
src/Network/: INetwork.h  clientsocket.cpp  clientsocket.h  networkadapter.cpp  networkadapter.h  socketclient.cpp  socketclient.h
src/Network/AvatarManagement/: avatarmanagement.cpp  avatarmanagement.h
src/Network/FileManager/: filemanager.cpp  filemanager.h
src/Network/Files/: tempchunkmanager.cpp  tempchunkmanager.h
src/Network/Handlers/: appeventbus.cpp  appeventbus.h  handlerregistry.cpp  handlerregistry.h
src/Network/PacketProcessor/: packetprocessor.cpp  packetprocessor.h
src/Network/Service/: authservice.cpp  authservice.h  avatarservice.cpp  avatarservice.h  friendservice.cpp  friendservice.h  servicemanager.cpp  servicemanager.h
src/Network/models/: userinfo.h
src/app/: mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
src/qwindowkit/lib/cmake/QWindowKit/: QWindowKitTargets.cmake
src/qwindowkit/linux/lib/cmake/QWindowKit/: QWindowKitConfigVersion.cmake  QWindowKitTargets-release.cmake  QWindowKitTargets.cmake
src/qwindowkit/linux/share/QWindowKit/qmake/: QWKCore.pri  QWKQuick.pri  QWKWidgets.pri
src/qwindowkit/win/include/QWindowKit/QWKCore/: qwkconfig.h
src/qwindowkit/win/lib/cmake/QWindowKit/: QWindowKitTargets-noconfig.cmake
src/resources/: Resource.qrc
src/resources/config/: app.ini
src/resources/picture/avatar/: D0.png.crdownload
src/resources/styles/: FriendNotify_Page.css  SettingsPage.css  addfrienddialog.css  change_avatar_page.css  chatListPage.css  friendlistwidget.css  loginPage.css  loginPage.css.bak  mainwindow.css  profilepage_main.css  qqcellline.css  qqcelltitle.css  recent_chats.css  registration_page.css
src/utils/: StyleLoader.cpp  appconfig.cpp  appconfig.h  clientsocket.cpp  clientsocket.h  styleLoader.cpp  styleLoader.h  utils.h
src/utils/AutoHideScrollbar/: autohidescrollbar.cpp  autohidescrollbar.h
src/utils/comapi/: Protocol.h  message_kind_utils.h  myapp.cpp  unit.h
src/widgets/: hoverbutton.cpp  hoverbutton.h  iplineedit.cpp  iplineedit.h
src/widgets/avatar/: avatarlabel.cpp  avatarlabel.h  avatarmanager.cpp  avatarmanager.h
ui/: mainwindow.ui  widget.ui
ui/components/Change_Avatar_Page/: change_avatar_page.cpp  change_avatar_page.h  change_avatar_page.ui  dragscrollarea.cpp  dragscrollarea.h
ui/components/FriendNotify/: FNPData.h  fnp_line.cpp  fnp_line.h  fnp_line.ui  friendnotify_page.cpp  friendnotify_page.h  friendnotify_page.ui
ui/components/FriendSearchWidget/: friendsearchwidget.cpp  friendsearchwidget.h  friendsearchwidget.ui
ui/components/ProfilePage/: profilepage_main.cpp  profilepage_main.h  profilepage_main.ui
ui/components/Registration_Page/: registration_page.cpp  registration_page.h  registration_page.ui
ui/components/SettingsPage/: settingspage.cpp  settingspage.h  settingspage.ui
ui/components/addfrienddialog/: addfrienddialog.cpp  addfrienddialog.h  addfrienddialog.ui
ui/components/chatListPage/: chatlist_line_left.cpp  chatlist_line_left.h  chatlist_line_left.ui  chatlist_main.cpp  chatlist_main.h  chatlist_main.ui
ui/components/chatListPage/chat-widget/: chatbubble.cpp  chatbubble.h  chatdelegate.cpp  chatdelegate.h  chatmodel.cpp  chatmodel.h  chatwidget.cpp  chatwidget.h
ui/components/contacts/: FriendInfo.h  friendlistwidget.cpp  friendlistwidget.h  qqcellline.cpp  qqcellline.h  qqcellline.ui  qqcelltitle.cpp  qqcelltitle.h  qqcelltitle.ui
ui/components/friendListPage/: friendlistwidget.cpp  friendlistwidget.h  qqcellline.cpp  qqcellline.h  qqcellline.ui  qqcelltitle.cpp  qqcelltitle.ui
ui/components/mainwindow/addFriendPage/: addfriendpage.cpp  addfriendpage.h  addfriendpage.ui
ui/components/mainwindow/chatContentPage/: chatcontentpage.cpp  chatcontentpage.h  chatcontentpage.ui
ui/components/mainwindow/chatListPage/: chatlistpage.cpp  chatlistpage.h  chatlistpage.ui  model.cpp  model.h  recent_data.h  recent_time_utlis.h
ui/components/mainwindow/chatListPage/recent_chats/: rc_line.cpp  rc_line.h  rc_line.ui
ui/components/mainwindow/friendListPage/: friendlistpage.cpp  friendlistpage.h  friendlistpage.ui
ui/components/mainwindow/placeholderPage/: placeholderpage.cpp  placeholderpage.h  placeholderpage.ui
ui/components/mainwindow/userInfoPage/: userinfopage.cpp  userinfopage.h  userinfopage.ui
